gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrder__c/PurchaseOrder__c.object-meta.xml
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <label>Purchase Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>