gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrder__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>