gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrder__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Supplier_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>