gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/PurchaseOrder__c/validationRules/Status_Requires_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Requires_Approval</fullName>
    <active>true</active>
    <description>PO Status can only be set to 'Ordered' if the PO is approved.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, "Ordered") &amp;&amp; NOT(Approved__c)</errorConditionFormula>
    <errorMessage>PO must be approved before it can be ordered.</errorMessage>
</ValidationRule>